# business-data-pipelines

./: .env.example  .gitignore  README.md  pyproject.toml
config/: qnh_activity_detail.example.yaml  qnh_review_detail.example.yaml
docs/: architecture.md  operations.md  qnh_activity_detail.md
scripts/: run_qnh_activity_detail_activity.ps1  run_qnh_activity_detail_all.ps1  run_qnh_activity_detail_parallel.ps1  run_qnh_activity_detail_store.ps1  run_qnh_review_detail.ps1
src/business_data_pipelines/: __init__.py  cli.py
src/business_data_pipelines/core/: __init__.py  config.py  db.py  excel.py  http.py  values.py
src/business_data_pipelines/pipelines/qnh/: __init__.py
src/business_data_pipelines/pipelines/qnh/activity_detail/: __init__.py  client.py  config.py  cookie_repository.py  importer.py  models.py  pipeline.py  repository.py
src/business_data_pipelines/pipelines/qnh/review_detail/: __init__.py  importer.py  pipeline.py
tests/: test_excel_parser.py  test_review_detail.py
